# tutorverse

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  Dockerfile.frontend  LICENSE  README.md
.github/workflows/: build_and_publish_frontend.yml
tutorverse-anchor/programs/tutorverse-contract/: Cargo.toml
tutorverse-anchor/programs/tutorverse-contract/src/: lib.rs
tutorverse-anchor/tests/: eduverse.ts  instruction.ts  pda.ts
tutorverse-frontend/: Cargo.toml  index.html
tutorverse-frontend/kubernetes/: eduverse-ingress.yaml  eduverse-svc.yaml  eduverse.yaml
tutorverse-frontend/src/: app.rs  types.rs  util.rs
tutorverse-frontend/src/app/: components.rs  pages.rs  router.rs
tutorverse-frontend/src/app/components/: navbar.rs  student_signup_dialog.rs  student_signup_form.rs  teacher_signup_dialog.rs  teacher_signup_form.rs
tutorverse-frontend/src/app/pages/: demo.rs  teacher_profile.rs  teacher_search.rs  teacher_signup.rs
tutorverse-frontend/src/app/services/: wallet.rs
tutorverse-frontend/src/solana/: contract_client.rs
tutorverse-frontend/src/types/: student.rs  teacher.rs
