[workspace]
members = [
    "tutorverse-anchor/programs/*",
    "tutorverse-anchor/anchor-wasm",
    "tutorverse-frontend",
]

resolver = "2"


[workspace.dependencies]
tutorverse-contract = { path = "tutorverse-anchor/programs/tutorverse-contract", default-features = false, features = [
    "wasm",
] }
